# Computational_Tools

./: CMakeLists.txt
data/: Custom2  Custom2~  Custom3  D1.TXT  D6.txt  D7.TXT  DATA1.TXT  EigenTest.txt  R6.txt  R7.txt  SUPERTEST.txt  dat.txt  matrix_1  matrix_2  v1.txt  v2.txt  v3.txt  v4.txt
project/include/: EigenValues.h  Interpolation.h  LinearSystems.h  Matrix.h  NonlinearSolve.h
project/src/: EigenValues.cpp  Interpolation.cpp  LinearSystems.cpp  Matrix.cpp  NonlinearSolve.cpp  main.cpp
